client/src/pages/Homepage/style.css
.home-img{
    /* max-width:650px;
    box-shadow: 1px 6px 10px 2px #9898; */
}

.quote-div {
    position:relative;
    width:50%;
    height:100px;
    background-color: #E6E6E6;
    /* margin:5% auto; */
    margin:0px auto;
    padding-top:25px;
}

.circle-icon {
    background: #ffc0c0;
    padding:10px;
    border-radius: 50%;
    font-size:50px;
    position:absolute; 
    top:-5px;
    left:-25px;
}

@media (max-width:677px) {
    .quote-div{
        width:75%;
    }
}



.price-container {
    display:flex;
    flex-direction:row;
    justify-content:center;
    flex-wrap:wrap;
}

.item{
    width:250px;
    height:200px;
    background-color:white;
    margin:10px;
}


.hero-text-block {
    color:white;
}

.btn {
    padding:10px 40px;
}

.action-button {
    color: white;
    font-size: 22px;
    height: 60px;
    opacity: .5 !important;
    width: 180px;
    width: 200px;
    margin-left: -100px;
    position: absolute;
    left: 50%;
    bottom: 35px;
    padding: 10px;
    transition: .6s;
    text-align: center;
    border: none;
    cursor: pointer;
}

.action-button:hover {
    opacity:.5;
}

.btn-outline-dark {
    color:white;
}

.btn-outline-dark:hover {
    color: #fff;
    background-color: transparent;
    border-color: transparent;
    opacity:1 !important;
    
}

.arrow-img {
    height: auto;
    opacity: .5 !important;
    justify-content: center;
    position: absolute;
    display: flex;
    bottom: 15px;
    align-items: center;
    padding: 10px;
    transition: .6s;
    text-align: center;
    border: none;
    left: 50%;
    width: 60px;
    margin-left: -30px;
}






.title-name {
    font-size:48px;
    font-family: 'Roboto', sans-serif;
    font-weight:300;
}

.subtitle {
    margin-top:50px;
    margin:25px;
}

.title-phrase {
    font-size:22px;
    letter-spacing:3px;
}

.homepage-content > hr {
    margin:50px auto;
}

